--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,8 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "client/build" }
+      "config": { "distDir": "client/dist" }
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/client/$1"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/client/index.html" }]
 }
