--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,5 @@
       "config": { "distDir": "client/dist" }
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/client/index.html" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/client/" }]
 }
