--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "src": "/(.*)",
       "dest": "/client/dist/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/client/dist/index.html"
     }
   ]
 }
